[package]
name = "env-exec-restart"
version = "0.1.0"
edition = "2021"
build = "build.rs"
[dependencies]
anyhow = "1.0.97"
bincode = "1.3.3"
clap = { version = "4.5.34", features = ["derive"] }
inquire = "0.7.5"
log = "0.4.27"
regex = "1.11.1"
serde = { version = "1.0.219", features = ["derive"] }
simple_logger = "5.0.0"
tempfile = "3.19.1"
toml = "0.8.20"
windows = { version = "0.61.1", features = ["Win32_System", "Win32_System_Diagnostics_ToolHelp", "Win32_System_Memory", "Win32_System_ProcessStatus", "Win32_System_Threading"] }
